tmux: update tmux session switcher behavior to be more intuitive
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -58,11 +58,12 @@ bind-key z resize-pane -Z
 # Session switcher with fzf popup
 bind-key s display-popup -E ' \
   original_session=$(tmux display-message -p "#S"); \
+  sessions=$(tmux list-sessions); \
+  current_line=$(echo "$sessions" | grep -n "^$original_session:" | cut -d: -f1); \
   selected=$( \
-    (tmux list-sessions | grep "^$original_session:"; \
-     tmux list-sessions | grep -v "^$original_session:") \
-    | fzf \
-      --bind="ctrl-x:execute(echo {} | cut -d: -f1 | xargs tmux kill-session -t)+reload(tmux list-sessions | grep \"^$original_session:\"; tmux list-sessions | grep -v \"^$original_session:\")" \
+    echo "$sessions" | fzf \
+      --bind="load:pos($current_line)" \
+      --bind="ctrl-x:transform:echo \"execute(echo {} | cut -d: -f1 | xargs tmux kill-session -t)+reload(tmux list-sessions)+pos($FZF_POS)\"" \
       --bind="focus:execute-silent(tmux switch-client -t {1})" \
       --delimiter=":" \
     | cut -d: -f1 \
