tmux: show active sessions in status + keybinds for switching sessions
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,7 +9,19 @@ set-option -g window-active-style bg=default
 set-option -g status-left "[#S]: "
 set-option -g status-left-style bg=#000000,fg=grey,bold
 set-option -g status-left-length 50
-set-option -g status-right ""
+set-option -g status-right '#( \
+  i=1; \
+  current="#S"; \
+  tmux list-sessions -F "##{session_name}" | while read -r s; do \
+    if [ "$s" = "$current" ]; then \
+      printf "#[fg=green,bold][%%d]: %%s " "$i" "$s"; \
+    else \
+      printf "#[fg=colour242][%%d]: %%s " "$i" "$s"; \
+    fi; \
+    i=$((i+1)); \
+  done \
+)'
+set-option -g status-right-length 150
 
 set-option -g window-status-format "[#I] #W #{?window_zoomed_flag,#[fg=black]#[bg=lightgreen][Z],}#{?pane_synchronized,#[fg=black]#[bg=red][S],}#{?pane_in_mode,#[fg=black]#[bg=yellow][C],}"
 set-option -g window-status-style bg=black,fg=grey
@@ -73,6 +85,13 @@ bind-key s display-popup -E ' \
     tmux switch-client -t "$selected"; \
   fi'
 
+# Switch to sessions by index (1-9)
+bind-key -n M-'!' run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 1p)"'
+bind-key -n M-'@' run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 2p)"'
+bind-key -n M-'#' run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 3p)"'
+bind-key -n M-'$' run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 4p)"'
+bind-key -n M-'%' run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 5p)"'
+
 # Create/Switch sessions for Zoxide directories
 bind-key p display-popup -E ' \
   dir=$(zoxide query -l | fzf --bind="ctrl-x:execute(echo {} | xargs zoxide remove)+reload(zoxide query -l)"); \
@@ -101,8 +120,8 @@ bind-key l switch-client -l
 bind-key \{ swap-pane -U
 bind-key \} swap-pane -D
 
-bind-key < command-prompt "rename-session '%%'"
-bind-key , command-prompt "rename-window '%%'"
+bind-key < command-prompt -I "#S" "rename-session '%%'"
+bind-key , command-prompt -I "#W" "rename-window '%%'"
 bind-key r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display "Refreshed!"
 
 # https://unix.stackexchange.com/a/25638
@@ -135,6 +154,7 @@ bind-key -n M-1 select-window -t 1
 bind-key -n M-2 select-window -t 2
 bind-key -n M-3 select-window -t 3
 bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
 
 bind-key 1 select-pane -t 1
 bind-key 2 select-pane -t 2
