tmux: fix keybind for loading tmux buffer in neovim
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,14 +46,18 @@ bind -n M-v run-shell ' \
   tmux save-buffer "$tmp"; \
   tmux display-popup -w 100% -h 100% -S fg=yellow,bg=black -E " \
      nvim -c \"set ft=conf\" \
-          -c \"lua vim.api.nvim_create_autocmd(\\\"BufReadPost\\\", \
-          {\
-                  once = true,\
-                  callback = function()\
-                         vim.schedule(function()\
-                                 vim.cmd([[normal Go]]) vim.fn.search([[\\\\S]], \\\"b\\\") vim.cmd([[normal jdG]]) vim.bo.modified = false\
-                         end)\
-                  end\
+          -c \"lua vim.api.nvim_create_autocmd(\\\"VimEnter\\\", { \
+                  once = true, \
+                  callback = function() \
+                    vim.schedule(function() \
+                      vim.cmd([[normal G]]) \
+                      vim.fn.search([[\\\\S]], \\\"bW\\\") \
+                      local line = vim.fn.line(\\\".\\\") \
+                      local last = vim.fn.line(\\\"\\$\\\") \
+                      if line < last then vim.cmd(([[%d,%dd]]):format(line + 1, last)) end \
+                      vim.bo.modified = false \
+                    end) \
+                  end \
           })\" \
     \"$tmp\"; \
   rm \"$tmp\" \
