--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,11 +50,9 @@ bind -n M-v run-shell ' \
                   once = true, \
                   callback = function() \
                     vim.schedule(function() \
-                      vim.cmd([[normal G]]) \
+                      require(\\\"conform\\\").format() \
+                      vim.cmd([[normal Go]]) \
                       vim.fn.search([[\\\\S]], \\\"bW\\\") \
-                      local line = vim.fn.line(\\\".\\\") \
-                      local last = vim.fn.line(\\\"\\$\\\") \
-                      if line < last then vim.cmd(([[%d,%dd]]):format(line + 1, last)) end \
                       vim.bo.modified = false \
                     end) \
                   end \
