--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -146,8 +146,8 @@ bind-key -T copy-mode-vi C-v send-keys -X begin-selection \; send-keys -X rectan
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
 bind-key -T copy-mode-vi Escape send-keys -X cancel
 
-bind-key -n M-\{ switch-client -p
-bind-key -n M-\} switch-client -n
+bind-key -n M-< switch-client -p
+bind-key -n M-> switch-client -n
 
 bind-key -n M-, select-window -p
 bind-key -n M-. select-window -n
@@ -165,8 +165,8 @@ bind-key 4 select-pane -t 4
 bind-key 5 select-pane -t 5
 bind-key 6 select-pane -t 6
 
-bind-key -n M-< swap-window -t -1\; select-window -t -1
-bind-key -n M-> swap-window -t +1\; select-window -t +1
+bind-key -n M-\{ swap-window -t -1\; select-window -t -1
+bind-key -n M-\} swap-window -t +1\; select-window -t +1
 
 # Bind 'Prefix + e' to split window vertically
 bind-key e split-window -h -c "#{?pane_path,#{s@^file.//@@:pane_path},#{pane_current_path}}"
