foot: Use colors.cursor instead of deprecated cursor.color
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -4,14 +4,14 @@ dpi-aware=no
 pad=0x0
 
 [cursor]
-color=CECECE 6f6f6f
-blink=no
 
 [colors]
 foreground=CECECE
 background=000000
 selection-foreground=000000
 selection-background=CECECE
+
+cursor=CECECE 6f6f6f
 
 regular0=000000
 regular1=cc6666
