tmux: fix compatibility with foot
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
-set-option -ga terminal-features ",xterm-ghostty:RGB"
 set -g default-terminal "tmux-256color"
+set -g terminal-features "foot:RGB:sixel"
 set -g extended-keys on
+set -g focus-events on
 
 set-option -g status-style bg=default,fg=white
 set-option -g window-style bg=default
@@ -87,12 +88,12 @@ bind-key s display-popup -E ' \
     tmux switch-client -t "$selected"; \
   fi'
 
-# Switch to sessions by index (1-9)
-bind-key -n M-'!' run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 1p)"'
-bind-key -n M-'@' run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 2p)"'
-bind-key -n M-'#' run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 3p)"'
-bind-key -n M-'$' run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 4p)"'
-bind-key -n M-'%' run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 5p)"'
+# Switch to sessions by index (1-5)
+bind-key -n M-S-! run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 1p)"'
+bind-key -n M-S-@ run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 2p)"'
+bind-key -n M-S-# run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 3p)"'
+bind-key -n M-S-$ run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 4p)"'
+bind-key -n M-S-% run-shell 'tmux switch-client -t "$(tmux list-sessions -F "##S" | sed -n 5p)"'
 
 # Create/Switch sessions for Zoxide directories
 bind-key p display-popup -E ' \
@@ -146,8 +147,8 @@ bind-key -T copy-mode-vi C-v send-keys -X begin-selection \; send-keys -X rectan
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
 bind-key -T copy-mode-vi Escape send-keys -X cancel
 
-bind-key -n M-< switch-client -p
-bind-key -n M-> switch-client -n
+bind-key -n M-S-< switch-client -p
+bind-key -n M-S-> switch-client -n
 
 bind-key -n M-, select-window -p
 bind-key -n M-. select-window -n
@@ -165,8 +166,8 @@ bind-key 4 select-pane -t 4
 bind-key 5 select-pane -t 5
 bind-key 6 select-pane -t 6
 
-bind-key -n M-\{ swap-window -t -1\; select-window -t -1
-bind-key -n M-\} swap-window -t +1\; select-window -t +1
+bind-key -n M-S-\{ swap-window -t -1\; select-window -t -1
+bind-key -n M-S-\} swap-window -t +1\; select-window -t +1
 
 # Bind 'Prefix + e' to split window vertically
 bind-key e split-window -h -c "#{?pane_path,#{s@^file.//@@:pane_path},#{pane_current_path}}"
